--- a/vijay.html
+++ b/vijay.html
@@ -10,4 +10,7 @@
       Tamil cinema with multiple films amongst the highest-grossing
        Tamil films of all time and is amongst the highest paid actors in India. 
        He has won several awards as an actor. Referred to as "Thalapathy" (transl. Commander), 
-      Vijay has a significant fan following.</p>
+      Vijay has a significant fan following.
+    </p>
+
+    <p>Contact Number: 8270497982</p>
